# viopi

./: .gitignore  README.md  pyproject.toml  viopi  viopi.code-workspace  viopi_utils.py  viopissh
src/: count
src/viopi/: __init__.py  main.py  viopi_help.py  viopi_ignorer.py  viopi_json_output.py  viopi_minifier.py  viopi_printer.py  viopi_utils.py  viopi_version.py
src/viopi.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
